jenkins/services.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: inlaze
spec:
  type: ExternalName
  externalName: 172.168.30.13
  ports:
    - port: 8085
